--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,54 @@
+/* CUSTOM PROPERTY */
+:root{
+  --body-bg:#F2F2F2;
+  --text-color:#111517;
+  --element-bg:#fff;
+}
+
+
+
+
+/* FONTS */
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../fonts/NunitoSans7pt-ExtraBold.woff") format("woff2"),
+  url("../fonts/NunitoSans7pt-ExtraBold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../fonts/NunitoSans7pt-Light.woff2") format("woff2"),
+  url("../fonts/NunitoSans7pt-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../fonts/NunitoSans7pt-SemiBold.woff") format("woff2"),
+  url("../fonts/NunitoSans7pt-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../fonts/NunitoSans7pt-Regular.woff") format("woff2"),
+  url("../fonts/NunitoSans7pt-Regular.woff2") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+
+
+/* GLOBAL */
 html{
   box-sizing: border-box;
   height: 100%;
@@ -15,11 +66,11 @@ body{
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial",sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #222;
+  font-family:"Nunito Sans","Arial",sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  background-color: var(--body-bg);
+  color: var(--text-color);
 }
 
 img{
@@ -27,14 +78,26 @@ img{
   height: auto;
 }
 
+a{
+  text-decoration: none;
+}
+
+/* DARK MODE */
+.dark-mode{
+  --body-bg:#202C36;
+  --text-color:#fff;
+  --element-bg:#2B3844;
+}
+
+
 /* CONTAINER */
 .container{
- width: 100%;
- max-width: 1200px;
- padding-left: 50px;
- padding-right: 50px;
- margin-left: auto;
- margin-right: auto;
+  width: 100%;
+  max-width: 1320px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
