--- a/css/styles.css
+++ b/css/styles.css
@@ -105,3 +105,54 @@ a{
 .main-content{
   flex-grow:1;
 }
+
+/* SITE-HEADER */
+.site-header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  background-color:var(--element-bg) ;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
+  white-space: nowrap;
+}
+.site-header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.site-header-logo {
+  font-size: 24px;
+  line-height: normal;
+  font-weight: 800;
+  color: var(--text-color);
+}
+.site-header-logo:hover{
+  opacity: 0.8;
+}
+.site-header-logo:active{
+  opacity: 0.6;
+}
+.site-header-theme-toggler {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.site-header-theme-toggler :hover{
+  opacity: 0.8;
+}
+.site-header-theme-toggler:active{
+  opacity: 0.6;
+}
+.site-header-theme-toggler-inner {
+  display: flex;
+  align-items: center;
+}
+.site-header-theme-toggler-text {
+  margin-left: 8px;
+  font-size: 16px;
+  color: var(--text-color);
+  line-height: 22px;
+  font-weight: 600;
+}
