--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ a{
 
 }
 .site-header-toggle-icon{
-  /* color: var(--text-color); */
+  color: var(--text-color);
 }
 .site-header-theme-toggler-text {
   margin-left: 8px;
