--- a/css/styles.css
+++ b/css/styles.css
@@ -167,9 +167,10 @@ a{
 
 /* FILTERS */
 .filters {
- display: flex;
- align-items: center;
- justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom:48px;
 }
 .filters-search-input {
   min-width:480px;
@@ -188,4 +189,69 @@ a{
   box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
   background-color: var(--element-bg);
   color: var(--text-color);
+}
+
+
+
+/* INDEX-COUNTIRES */
+.index-countries-list {
+  display: flex;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-left:-75px;
+  margin-bottom: -75px;
+  list-style: none;
+
+}
+.index-countries-item {
+  width: calc(25% - 75px);
+  margin-left: 75px;
+  margin-bottom: 67px;
+}
+
+/* INDEX-COUNTYR */
+.index-country {
+  border-radius: 7px;
+  overflow:hidden;
+  background-color: var(--element-bg);
+  color: var(--text-color);
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
+}
+.index-country-flag {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+}
+.index-country-info {
+  padding: 24px 24px 48px;
+}
+.index-country-name {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 18px;
+  line-height: normal;
+  font-weight: 800;
+}
+
+.index-country-link{
+  color:var(--text-color) ;
+}
+.index-country-details {
+  margin: 0;
+}
+.index-country-details-item{
+ display: flex;
+ flex-wrap: wrap;
+}
+.index-country-details-item:not(:last-child) {
+ margin-bottom: 8px;
+}
+.index-country-details-title {
+  font-weight: 600;
+
+}
+.index-country-details-value{
+  margin-left: 4px;
 }
